--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -7,11 +7,18 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  validate:
-    runs-on: "ubuntu-latest"
+  validate_hacs:
+    name: "HACS Validation"
+    runs-on: ubuntu-latest
     steps:
       - uses: "actions/checkout@v2"
-      - name: HACS validation
+      - name: HACS Action
         uses: "hacs/action@main"
         with:
           category: "plugin"
+  validate_hassfest:
+    name: "Hassfest Validation"
+    runs-on: "ubuntu-latest"
+    steps:
+      - uses: "actions/checkout@v2"
+      - uses: home-assistant/actions/hassfest@master
